update kauffman entrepreneurship indicator

--- a/rahim_ghani_predict/features-finalize.ipynb
+++ b/rahim_ghani_predict/features-finalize.ipynb
@@ -21,7 +21,16 @@
    "execution_count": 2,
    "id": "common-venezuela",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Abdul Rahim Ab Ghani\\miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3147: DtypeWarning: Columns (12,13,14) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "#import outcome file with org_uuid\n",
     "main_df = pd.read_csv(R\"d:/msc-project/data/final/outcome_final_v1.csv\",encoding='utf-8',\n",
@@ -32,17 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "worst-highlight",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20653"
+       "26259"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,17 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "printable-imperial",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "28658"
+       "38605"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,17 +87,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "sharp-montreal",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "28658"
+       "38605"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +110,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
+   "id": "spatial-boost",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38605"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#import investor features\n",
+    "features_investor = pd.read_csv(r'd:\\msc-project\\data\\final\\features_investor.csv',encoding='utf=8')\n",
+    "len(features_innovation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "floating-three",
    "metadata": {},
    "outputs": [],
@@ -114,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "selected-amsterdam",
    "metadata": {},
    "outputs": [],
@@ -127,12 +159,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
+   "id": "numerous-corrections",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_combine_v3 = pd.merge(features_combine_v2,\n",
+    "                               features_investor,\n",
+    "                               on='org_uuid',\n",
+    "                               how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "exciting-click",
    "metadata": {},
    "outputs": [],
    "source": [
-    "features_combine_with_outcome = pd.merge(features_combine_v2,\n",
+    "features_combine_with_outcome = pd.merge(features_combine_v3,\n",
     "                                        main_df[['org_uuid','outcome']],\n",
     "                                        on='org_uuid',\n",
     "                                        how='left')"
@@ -140,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "adequate-project",
    "metadata": {},
    "outputs": [
@@ -176,15 +221,15 @@
        "      <th>people_is_ivy_league</th>\n",
        "      <th>people_is_top_100</th>\n",
        "      <th>...</th>\n",
-       "      <th>network_is_country_usa</th>\n",
-       "      <th>network_is_country_uzb</th>\n",
-       "      <th>network_is_country_ven</th>\n",
        "      <th>network_is_country_vnm</th>\n",
        "      <th>network_is_country_yem</th>\n",
        "      <th>network_is_country_zaf</th>\n",
        "      <th>network_is_country_zmb</th>\n",
        "      <th>network_is_country_zwe</th>\n",
        "      <th>network_is_attend_top1percentile_event</th>\n",
+       "      <th>investor_is_cbtop1000</th>\n",
+       "      <th>investor_is_no_rank</th>\n",
+       "      <th>investor_is_not_cbtop1000</th>\n",
        "      <th>outcome</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -209,7 +254,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -233,7 +278,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -250,20 +295,20 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 246 columns</p>\n",
+       "<p>3 rows × 253 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -282,30 +327,30 @@
        "1            0.0            0.0             1.0                   0.0   \n",
        "2            0.0            0.0             0.0                   0.0   \n",
        "\n",
-       "   people_is_top_100  ...  network_is_country_usa  network_is_country_uzb  \\\n",
+       "   people_is_top_100  ...  network_is_country_vnm  network_is_country_yem  \\\n",
        "0                0.0  ...                       0                       0   \n",
        "1                0.0  ...                       0                       0   \n",
-       "2                0.0  ...                       1                       0   \n",
-       "\n",
-       "   network_is_country_ven  network_is_country_vnm  network_is_country_yem  \\\n",
-       "0                       0                       0                       0   \n",
-       "1                       0                       0                       0   \n",
-       "2                       0                       0                       0   \n",
+       "2                0.0  ...                       0                       0   \n",
        "\n",
        "   network_is_country_zaf  network_is_country_zmb  network_is_country_zwe  \\\n",
        "0                       0                       0                       0   \n",
        "1                       0                       0                       0   \n",
        "2                       0                       0                       0   \n",
        "\n",
-       "   network_is_attend_top1percentile_event  outcome  \n",
-       "0                                       0        0  \n",
-       "1                                       0        0  \n",
-       "2                                       0        0  \n",
+       "   network_is_attend_top1percentile_event  investor_is_cbtop1000  \\\n",
+       "0                                       0                      0   \n",
+       "1                                       0                      0   \n",
+       "2                                       0                      0   \n",
        "\n",
-       "[3 rows x 246 columns]"
+       "   investor_is_no_rank  investor_is_not_cbtop1000  outcome  \n",
+       "0                    1                          0        0  \n",
+       "1                    1                          0        0  \n",
+       "2                    1                          0        0  \n",
+       "\n",
+       "[3 rows x 253 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,17 +361,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "rotary-immune",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20653"
+       "26259"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,19 +382,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "center-courage",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    13468\n",
-       "1     7185\n",
+       "0    18326\n",
+       "1     7933\n",
        "Name: outcome, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "needed-music",
    "metadata": {},
    "outputs": [],
