completed final model run and shap values analysis

--- a/rahim_ghani_predict/code/pre-processing/data-pre-processing-main.ipynb
+++ b/rahim_ghani_predict/code/pre-processing/data-pre-processing-main.ipynb
@@ -28,6 +28,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 203,
+   "id": "c803d62a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1216445"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(org_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "collected-cooling",
    "metadata": {},
@@ -742,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 208,
    "id": "north-contact",
    "metadata": {},
    "outputs": [
@@ -754,13 +775,47 @@
        "       31., 24., 27., 25.,  0., 41., 34., 30., 36.])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "org_df_v1['num_funding_rounds'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "id": "de2c8261",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10         2006-01-01\n",
+       "24         2005-02-01\n",
+       "32         1863-01-01\n",
+       "36         1971-01-01\n",
+       "56         1985-01-01\n",
+       "              ...    \n",
+       "1216221           NaN\n",
+       "1216231    2003-01-01\n",
+       "1216246    1957-01-01\n",
+       "1216248           NaN\n",
+       "1216419           NaN\n",
+       "Name: founded_on, Length: 104825, dtype: object"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask1=org_df_v1['status'] == 'ipo'\n",
+    "mask2=org_df_v1['status'] == 'acquired'\n",
+    "org_df_v1[mask1 | mask2][org_df_v1[mask1 | mask2]['num_funding_rounds'].isna()]['founded_on']"
    ]
   },
   {
@@ -918,6 +973,27 @@
    "source": [
     "#import organisations description.csv\n",
     "org_desc_df = pd.read_csv(R\"d:/msc-project/data/bulk_export_122020/organization_descriptions.csv\",encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "id": "955eaeb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "661713"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(org_desc_df)"
    ]
   },
   {
@@ -1088,6 +1164,27 @@
    "source": [
     "#import ipos.csv\n",
     "ipos_df = pd.read_csv(R\"d:\\\\msc-project\\data\\bulk_export_122020\\ipos.csv\",encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "id": "7b53fa04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35109"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ipos_df)"
    ]
   },
   {
@@ -1387,6 +1484,27 @@
    "source": [
     "#import acquisitions.csv\n",
     "acquisitions_df = pd.read_csv(R\"d:\\\\msc-project\\data\\bulk_export_122020\\acquisitions.csv\",encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "id": "2c124df1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "109215"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(acquisitions_df)"
    ]
   },
   {
@@ -1776,6 +1894,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 226,
+   "id": "d3bf6cef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16881"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(parents_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 59,
    "id": "cathedral-trick",
    "metadata": {},
@@ -2113,6 +2252,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 227,
+   "id": "2cd06924",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "364336"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(funding_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 73,
    "id": "tracked-bacteria",
    "metadata": {},
@@ -2363,6 +2523,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 228,
+   "id": "2c2131bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "548451"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(investments_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 83,
    "id": "structured-dress",
    "metadata": {},
@@ -2510,6 +2691,27 @@
    "source": [
     "#import investors\n",
     "investors_df = pd.read_csv(R\"d:/msc-project/data/bulk_export_122020/investors.csv\",encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "57b60ced",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "166794"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(investors_df)"
    ]
   },
   {
@@ -2890,6 +3092,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 230,
+   "id": "3a5c0a7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "95644"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(investment_partner_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 101,
    "id": "vietnamese-consensus",
    "metadata": {},
@@ -3108,6 +3331,27 @@
    "outputs": [],
    "source": [
     "funds_df = pd.read_csv(R\"d:/msc-project/data/bulk_export_122020/funds.csv\",encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "84aa3e98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16216"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(funds_df)"
    ]
   },
   {
@@ -3358,6 +3602,27 @@
    "source": [
     "#import events.csv\n",
     "events_df = pd.read_csv(R\"d:/msc-project/data/bulk_export_122020/events.csv\",encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "49e52ee3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22272"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(events_df)"
    ]
   },
   {
@@ -3677,6 +3942,27 @@
    "source": [
     "#import event_appearances.csv\n",
     "event_appear_df = pd.read_csv(R\"d:/msc-project/data/bulk_export_122020/event_appearances.csv\",encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "id": "3aa53f5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "413329"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(event_appear_df)"
    ]
   },
   {
@@ -4006,6 +4292,27 @@
    "source": [
     "#import people.csv\n",
     "people_df = pd.read_csv(R\"d:/msc-project/data/bulk_export_122020/people.csv\",encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "id": "4c25cf8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1099621"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(people_df)"
    ]
   },
   {
@@ -4346,6 +4653,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 235,
+   "id": "4cca2f72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "578454"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(people_desc_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 144,
    "id": "potential-spank",
    "metadata": {},
@@ -4556,6 +4884,27 @@
    "source": [
     "#import degress.csv\n",
     "deg_df = pd.read_csv(R\"d:/msc-project/data/bulk_export_122020/degrees.csv\",encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "2d4b3ace",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "369516"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(deg_df)"
    ]
   },
   {
@@ -5451,6 +5800,27 @@
    "source": [
     "#import jobs.csv\n",
     "jobs_df = pd.read_csv(R\"d:/msc-project/data/bulk_export_122020/jobs.csv\",encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "id": "b1d6c9cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1581722"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(jobs_df)"
    ]
   },
   {
