Add readme, additional data info and folder structure

--- a/rahim_ghani_predict/code/pre-processing/data-pre-processing-main.ipynb
+++ b/rahim_ghani_predict/code/pre-processing/data-pre-processing-main.ipynb
@@ -5753,7 +5753,7 @@
     "#assign top 100 school based on 2020 QS ranking\n",
     "\n",
     "#import file\n",
-    "uni_top_100 = pd.read_csv(R\"d:\\msc-project\\data\\QS-world-university-rankings\\2020-QS-World-University-Rankings-compressed.csv\",)\n",
+    "uni_top_100 = pd.read_csv(R\"D:\\msc-project\\from-github\\dissertations-2021-info\\rahim_ghani_predict\\data\\QS-world-university-rankings\\2020-QS-World-University-Rankings-compressed.csv\",)\n",
     "\n",
     "#create list and string of uni_top_100\n",
     "uni_top_100 = list(uni_top_100['uni_name'].str.lower())\n",
