--- a/rahim_ghani_predict/code/features/features-development-investors.ipynb
+++ b/rahim_ghani_predict/code/features/features-development-investors.ipynb
@@ -2000,12 +2000,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "considered-alabama",
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_processing_df_v3.to_csv(r'D:\\msc-project\\from-github\\dissertations-2021-info\\rahim_ghani_predict\\data\\final\\features_investor.csv',encoding='utf=8')"
+    "main_processing_df_v3.to_csv(r'D:\\msc-project\\from-github\\dissertations-2021-info\\rahim_ghani_predict\\data\\final\\features_investors.csv',encoding='utf=8')"
    ]
   },
   {
